--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 /AnGeLiDatabase.txt
+/AnGeLiDatabase.txt.OLD
 .DS_Store
 __pycache__/
 .venv/
@@ -7,3 +8,4 @@ angeli_output.log
 AnGeLiDatabase_MASTER.txt
 angeli_output.log
 angeli_output.log
+bahlerweb/
